--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+# Django
 django==3.2
-python-decouple==3.6
-psycopg2-binary==2.9.3
+django-environ==0.9.0
 
+# DB
+psycopg2-binary==2.9.3
+Pillow==9.1.1
