--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Django
 django==3.2
 django-environ==0.9.0
+django-debug-toolbar==3.4.0
 
 # DB
 psycopg2-binary==2.9.3
@@ -14,3 +15,6 @@ celery==5.2.7
 openpyxl==3.0.10
 xlsx2html==0.4.0
 pdfkit==1.0.0
+
+# deploy
+gunicorn==20.1.0
